k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: fastshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:16-alpine
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
        - name: db-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
      - name: db-init
        configMap:
          name: db-init-sql
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: fastshop
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
